[project]
name = "clustering"
version = "0.1.0"
description = ""
authors = [
    {name = "Hendra Danu Laksana",email = "hdl.project.co@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[tool.poetry]
packages = [{include = "clustering", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
